# myshenyatko

./: Cargo.toml  LICENSE  Makefile  README.md
.claude/: settings.local.json
src/: app.rs  event.rs  main.rs
src/profiles/: mod.rs  storage.rs
src/settings/: mod.rs  reader.rs  registry.rs  writer.rs
src/ui/: cursor.rs  diff.rs  keyboard.rs  mod.rs  mouse.rs  profiles.rs  scroll.rs  trackpad.rs  widgets.rs
