[package]
name = "myshenyatko"
version = "0.1.0"
edition = "2026"
description = "TUI for managing macOS mouse, trackpad, cursor, and keyboard settings"
license = "MIT-NORUS"
repository = "https://github.com/vhotsyk/myshenyatko"
readme = "README.md"
keywords = ["macos", "mouse", "trackpad", "tui", "settings"]
categories = ["command-line-utilities", "os::macos-apis"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
